--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "salao-da-amanda",
+  "name": "salao_amanda",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo-google-fonts/montserrat": "^0.4.2",
-    "@expo-google-fonts/quicksand": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@shopify/flash-list": "2.0.2",
-    "expo": "~54.0.30",
-    "expo-constants": "~18.0.12",
+    "@shopify/flash-list": "^2.2.0",
+    "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
+    "expo": "~54.0.31",
+    "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
-    "expo-notifications": "~0.32.15",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "firebase": "^12.7.0",
-    "lodash": "^4.17.21",
-    "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -46,14 +44,13 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "sonner-native": "^0.22.2"
+    "sonner-native": "^0.22.2",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.21",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "tailwindcss": "^3.3.2",
     "typescript": "~5.9.2"
   },
   "private": true
