--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "socket.io-client": "^4.8.3",
     "sonner-native": "^0.22.2",
     "typescript": "~5.9.2"
   },
